--- a/app/views/pages/_editor_guide_text.html.erb
+++ b/app/views/pages/_editor_guide_text.html.erb
@@ -200,7 +200,7 @@
       <code>{% kotlin https://pl.kotl.in/owreUFFUG?theme=darcula&from=3&to=6&readOnly=true %}</code>
       <h3><strong>RunKit Embed</strong></h3>
       <p>Put executable code within a runkit liquid block, as follows:</p>
-      <pre>{% runkit<br>// hidden setup JavaScript code goes in this preamble area<br>const hiddenVar = 42<br>%}<br>// visible, reader-editable JavaScript code goes here<br>console.log(hiddenVar)<br>{% endrunkit %}<br></pre>
+      <pre>{% runkit<br>// hidden setup JavaScript code goes in this preamble area<br>const hiddenVar = 42<br>%}<br>// visible, reader-editable JavaScript code goes here<br><br>{% endrunkit %}<br></pre>
 
       <h3><strong>KaTeX Embed</strong></h3>
       <p>Place your mathematical expression within a KaTeX liquid block, as follows:</p>
